# uos

./: CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: ci.yml
_examples_embassy/: Cargo.toml  Makefile  test.sh
_examples_embassy/.cargo/: config.toml
_examples_embassy/src/: e1000_adapter.rs  heap.rs  kernfn.rs  logger.rs  main.rs  mmio.rs  mmio_regs.rs  pci_init.rs  serial.rs  time_driver.rs
crates/e1000/src/: desc.rs  device.rs
crates/embclox-async/: Cargo.toml  README.md
crates/embclox-async/src/: lib.rs
crates/embclox-core/: Cargo.toml  README.md
crates/embclox-core/src/: dma_alloc.rs  e1000_embassy.rs  e1000_helpers.rs  lib.rs  mmio_regs.rs  tulip_embassy.rs
crates/embclox-dma/: Cargo.toml  README.md
crates/embclox-dma/src/: lib.rs
crates/embclox-e1000/: Cargo.toml  README.md
crates/embclox-e1000/src/: device.rs  dma.rs  error.rs  lib.rs  regs.rs
crates/embclox-hal-x86/: Cargo.toml  README.md
crates/embclox-hal-x86/src/: apic.rs  cmdline.rs  critical_section_impl.rs  idt.rs  lib.rs  memory.rs  pci.rs  pic.rs  pit.rs  runtime.rs  serial.rs  time.rs
crates/embclox-hyperv/: Cargo.toml  README.md  build.rs
crates/embclox-hyperv/include/: README.md  VmbusPacketFormat.h  hyperv_net_bindgen.h  hyperv_vmbus.h  msvm_compat.h  nvspprotocol.h  rndis_msvm.h
crates/embclox-hyperv/src/: channel.rs  ffi.rs  hypercall.rs  lib.rs  netvsc.rs  nvsp_msg.rs  nvsp_types.rs  ring.rs  synic.rs  synthvid.rs  vmbus.rs
crates/embclox-test-macros/: Cargo.toml
crates/embclox-test-macros/src/: lib.rs
crates/embclox-tulip/: Cargo.toml  README.md
crates/embclox-tulip/src/: csr.rs  desc.rs  device.rs  eeprom.rs  lib.rs
crates/hal-x86/src/: heap.rs  ioapic.rs  lib.rs
docs/design/: async-boot-init.md  e1000-driver-refactor.md  e1000-embassy-example.md  hal-x86.md  hyperv-gen1.md  hyperv-netvsc.md  interrupt-driven-mode.md  test-framework.md
docs/dev/: HyperV-Testing.md  Setup.md
examples/: Cargo.toml  test.sh
examples-e1000/: README.md
examples-e1000/src/: main.rs
examples-hyperv/: CMakeLists.txt  Cargo.toml  README.md  limine.conf
examples-hyperv/.cargo/: config.toml
examples-hyperv/src/: framebuffer.rs  main.rs
examples-tulip/: CMakeLists.txt  Cargo.toml  README.md  limine.conf  linker.ld
examples-tulip/.cargo/: config.toml
examples-tulip/src/: critical_section_impl.rs  main.rs  time.rs
examples/src/: dma_alloc.rs  e1000_adapter.rs  main.rs  mmio_regs.rs
qemu-tests/unit/: Cargo.toml
qemu-tests/unit/src/: main.rs
qemu-tests/unit/src/suites/: e1000_driver.rs  e1000_embassy.rs  e1000_smoke.rs  hal_memory.rs  hal_pci.rs  mod.rs
scripts/: hyperv-boot-test.ps1  hyperv-setup-vswitch.ps1  hyperv-tulip-test.ps1  qemu-test.sh
tools/embclox-mkimage/: Cargo.toml
tools/embclox-mkimage/src/: main.rs
tools/mkimage/: Cargo.toml
