[workspace]
resolver = "2"

members = [
    "external/e1000",
    "tools/mkimage",
    "_examples_embassy",
]

default-members = [
    "external/e1000",
    "tools/mkimage",
]

[workspace.dependencies]
# Embassy ecosystem
embassy-executor = { version = "0.10", features = ["platform-spin", "executor-thread"] }
embassy-net = { version = "0.9", features = ["tcp", "udp", "medium-ethernet", "proto-ipv4", "log"] }
embassy-net-driver = "0.2"
embassy-time = { version = "0.5", features = ["tick-hz-1_000_000"] }
embassy-time-driver = "0.2"
embassy-sync = "0.8"
embassy-futures = "0.1"
embedded-io-async = "0.7"

# Drivers & platform
e1000-driver = { path = "external/e1000" }
bootloader = "0.11"
bootloader_api = "0.11"
x86_64 = "0.15"
uart_16550 = "0.6"

# Utilities
log = "0.4"
static_cell = "2"
linked_list_allocator = "0.10"
critical-section = { version = "1", features = ["restore-state-bool"] }
spin = "0.10"
