[workspace]
resolver = "2"

members = [
    "tools/embclox-mkimage",
    "examples-e1000",
    "examples-hyperv",
    "examples-tulip",
    "qemu-tests/unit",
    "crates/embclox-core",
    "crates/embclox-dma",
    "crates/embclox-e1000",
    "crates/embclox-hal-x86",
    "crates/embclox-hyperv",
    "crates/embclox-tulip",
    "crates/embclox-test-macros",
]

default-members = [
    "tools/embclox-mkimage",
    "crates/embclox-core",
    "crates/embclox-dma",
    "crates/embclox-e1000",
    "crates/embclox-hal-x86",
    "crates/embclox-hyperv",
    "crates/embclox-tulip",
    "crates/embclox-test-macros",
]

[workspace.dependencies]
# Embassy ecosystem
embassy-executor = { version = "0.10", features = ["platform-spin", "executor-thread"] }
embassy-net = { version = "0.9", features = ["tcp", "udp", "medium-ethernet", "proto-ipv4", "dhcpv4", "log"] }
embassy-net-driver = "0.2"
embassy-time = { version = "0.5", features = ["tick-hz-1_000_000"] }
embassy-time-driver = "0.2"
embassy-sync = "0.8"
embassy-futures = "0.1"
embedded-io-async = "0.7"

# Drivers & platform
embclox-dma = { path = "crates/embclox-dma" }
embclox-hyperv = { path = "crates/embclox-hyperv" }
embclox-tulip = { path = "crates/embclox-tulip" }
embclox-core = { path = "crates/embclox-core" }
embclox-e1000 = { path = "crates/embclox-e1000" }
embclox-hal-x86 = { path = "crates/embclox-hal-x86" }
embclox-test-macros = { path = "crates/embclox-test-macros" }
bootloader = "0.11"
bootloader_api = "0.11"
x86_64 = "0.15"
uart_16550 = "0.6"

# Utilities
log = "0.4"
static_cell = "2"
linked_list_allocator = "0.10"
critical-section = { version = "1", features = ["restore-state-bool"] }
spin = "0.10"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
bindgen = "0.72"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
