[package]
name = "e1000-embassy-example"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-net-driver.workspace = true
embassy-time.workspace = true
embassy-time-driver.workspace = true
embassy-sync.workspace = true
embassy-futures.workspace = true
embedded-io-async.workspace = true

e1000-driver.workspace = true
bootloader_api.workspace = true
x86_64.workspace = true
uart_16550.workspace = true
log.workspace = true
static_cell.workspace = true
linked_list_allocator.workspace = true
critical-section.workspace = true
spin.workspace = true
