[package]
name = "embclox-example"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-net-driver.workspace = true
embassy-time.workspace = true
embassy-sync.workspace = true
embassy-futures.workspace = true
embedded-io-async.workspace = true

embclox-core.workspace = true
embclox-e1000.workspace = true
embclox-hal-x86.workspace = true
bootloader_api.workspace = true
x86_64.workspace = true
log.workspace = true
static_cell.workspace = true
spin.workspace = true
