[package]
name = "embclox-hal-x86"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api.workspace = true
x86_64.workspace = true
uart_16550.workspace = true
log.workspace = true
linked_list_allocator.workspace = true
critical-section.workspace = true
embassy-time-driver.workspace = true
embassy-executor.workspace = true
embclox-async.workspace = true
spin.workspace = true
