[package]
name = "embclox-hyperv"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures.workspace = true
embclox-async.workspace = true
embclox-dma.workspace = true
embclox-hal-x86.workspace = true
embassy-net-driver.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
log.workspace = true

[build-dependencies]
bindgen.workspace = true
